--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Index.CSS">
+    <link rel="stylesheet" href="pricipal.CSS">
     <title>Document</title>
 </head>
 <body>
@@ -24,6 +24,6 @@
                 </ul>
             </nav>
         </header>
-        <script src="Index.CSS"></script>
+        <script src="principal.CSS"></script>
 </body>
 </html>
