--- a/ai.HTML
+++ b/ai.HTML
@@ -20,7 +20,7 @@
                 <li><a href="Bace de Datos.HTML">Bace de datos</a></li>
                 <li><a href="Hoja de calculo.HTML">Hoja de calculo</a></li>
                 <li><a href="aplicaciones de apoyo.HTML">aplicaciones como apoyo</a></li>
-                <li><a href="principal.HTML">salir</a></li>
+                <li><a href="index.html">salir</a></li>
             </ul>
         </nav>
     <a><button onclick="window.location.href='ai de afuera.HTML'">Ai de afuera</button></a>
