--- a/aidenosotros.HTML
+++ b/aidenosotros.HTML
@@ -14,7 +14,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="principal.HTML">inicio</a></li>
+                    <li><a href="index.html">inicio</a></li>
                     <li><a href="ai.HTML">salir</a></li>
                 </ul>
                 </nav>
