--- a/calculadora.HTML
+++ b/calculadora.HTML
@@ -19,7 +19,7 @@
                 <li><a href="Bace de Datos.HTML">Bace de datos</a></li>
                 <li><a href="Hoja de calculo.HTML">Hoja de calculo</a></li>
                 <li><a href="aplicaciones de apoyo.HTML">aplicaciones como apoyo</a></li>
-                <li><a href="principal.HTML">salir</a></li>
+                <li><a href="index.html">salir</a></li>
             </ul>
         </nav>
         <div class="calculator">
