--- a/ai de afuera.HTML
+++ b/ai de afuera.HTML
@@ -14,7 +14,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="principal.HTML">salir</a></li>
+                    <li><a href="index.html">salir</a></li>
                     <li><a href="ai.HTML">Ai</a></li>
                 </ul>
             </nav>
