--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <body background="logos/1asyzovvrn8a1.gif">
+        <body background="imagenes/pagina_pricipal/principal.jpg"></body>
         <header>
             <div class="top-bar">
                 <span>tel: no disponible | correo electronico: no disponible</span>
