--- a/ReloJ.HTML
+++ b/ReloJ.HTML
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <body background="logos/5.gif">
+    <body background="imagenes/pagina_pricipal/tiempo.jpg"></body>
         <header>
             <div class="top-bar">
                 <span>tel: no disponible | correo electronico: no disponible</span>
