--- a/musica.HTML
+++ b/musica.HTML
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Musica.CSS">
 </head>
 <body>
-    <body background="logos/3.gif">
+    <body background="imagenes/pagina_pricipal/musica.jpg"></body>
     <header>
         <h1>Música</h1>
     </header>
