--- a/ai.HTML
+++ b/ai.HTML
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <body background="logos/040823_chatgpt_feat.gif">
+    <body background="imagenes/pagina_pricipal/ai afuera.jpg"></body>
     <header>
         <div class="top-bar">
             <span>tel: no disponible | correo electronico: no disponible</span>
