--- a/aidenosotros.HTML
+++ b/aidenosotros.HTML
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="aidenosotros.CSS">
 </head>
 <body>
-    <body background="logos/aipropia.gif">
+    <body background="imagenes/pagina_pricipal/ai afuera.jpg"></body>
         <header>
             <div class="top-bar">
                 <span>tel: no disponible | correo electronico: no disponible</span>
