--- a/calculadora.HTML
+++ b/calculadora.HTML
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <body background="imagenes/pagina_pricipal/mate.jpg">
+    <body background="imagenes/pagina_pricipal/mate.jpg"></body>
         <div class="top-bar">
             <span>tel: no disponible | correo electronico: no disponible</span>
         </div>
