--- a/aplicaciones de apoyo.HTML
+++ b/aplicaciones de apoyo.HTML
@@ -20,7 +20,7 @@
                     <li><a href="ai.HTML">Ai</a></li>
                     <li><a href="Bace de Datos.HTML">Bace de datos</a></li>
                     <li><a href="Hoja de calculo.HTML">Hoja de calculo</a></li>
-                    <li><a href="index.HTML">salir</a></li>
+                    <li><a href="index.html">salir</a></li>
                 </ul>
             </nav>
         </header>
