--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="Bace de Datos.HTML">Bace de datos</a></li>
                     <li><a href="Hoja de calculo.HTML">Hoja de calculo</a></li>
                     <li><a href="aplicaciones de apoyo.HTML">aplicaciones como apoyo</a></li>
+                    <li><a href="agracimiento.HTML">Aportacion del Equipo</a></li>
                 </ul>
             </nav>
         </header>
