--- a/agracimiento.HTML
+++ b/agracimiento.HTML
@@ -11,6 +11,9 @@
         <div class="top-bar">
             <span>tel: no disponible | correo electrónico: no disponible</span>
         </div>
+         <ul>
+                    <li><a href="index.html">inicio</a></li>
+                </ul>
     </header>
     <div class="container">
         <h1>Créditos</h1>
