--- a/agracimiento.HTML
+++ b/agracimiento.HTML
@@ -11,9 +11,12 @@
         <div class="top-bar">
             <span>tel: no disponible | correo electrónico: no disponible</span>
         </div>
-         <ul>
+         <nav>
+                <ul>
                     <li><a href="index.html">inicio</a></li>
+                    <li><a href="ai.HTML">salir</a></li>
                 </ul>
+                </nav>
     </header>
     <div class="container">
         <h1>Créditos</h1>
