--- a/agracimiento.HTML
+++ b/agracimiento.HTML
@@ -11,11 +11,6 @@
         <div class="top-bar">
             <span>tel: no disponible | correo electrónico: no disponible</span>
         </div>
-         <nav>
-                <ul>
-                    <li><a href="index.html">inicio</a></li>
-                </ul>
-                </nav>
     </header>
     <div class="container">
         <h1>Créditos</h1>
@@ -23,12 +18,12 @@
         <div class="creditos-section">
             <div class="credito">
                 <img src="imagenes/ai/Luis.jpg" alt="Equipo 1" class="credito-img">
-                <h2>Desarrollo de los documentos de Word pare el trabajo y regristro los cambios de la pagina</h2>
+                <h2>Desarrollo de los documentos de Word para el trabajo y regristro los cambios de la pagina "Luis Jonathan Carmona Pizano"</h2>
                 <p>hizo el rastro de los cambios de la pagina WEB</p>
             </div>
             <div class="credito">
                 <img src="imagenes/ai/toño.jpg" alt="Equipo 2" class="credito-img">
-                <h2>Soporte Técnico en la programacion de la pagina WEB.</h2>
+                <h2>Soporte Técnico en la programacion de la pagina WEB."Jose Antonio Barajas Lopez"</h2>
                 <p>Hizo los programa y lo hizo funcionar</p>
             </div>
         </div>
