--- a/Bace de Datos.HTML
+++ b/Bace de Datos.HTML
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.HTML">salir</a></li>
+                <li><a href="index.html">salir</a></li>
             </ul>
         </nav>
     </header>
