--- a/Hoja de calculo.HTML
+++ b/Hoja de calculo.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de Cálculo</title>
-    <link rel="stylesheet" href="hojadecalculo.css">
+    <link rel="stylesheet" href="hojadecalculo.CSS">
 </head>
 <body>
     <header>
@@ -47,6 +47,6 @@
             <button id="sendEmail">Enviar por correo</button>
         </div>
     </div>
-    <script src="hojadecalculo.js"></script>
+    <script src="hojadecalculo.JS"></script>
 </body>
 </html>
